--- a/cervii-reloaded.html
+++ b/cervii-reloaded.html
@@ -20,8 +20,10 @@ var colors = [
 	"#40FF40"
 ];
 
-var players = [];
-var pnum;
+var status;
+var players;
+var myNumber;
+var interval;
 
 var leftPressed = false;
 var rightPressed = false;
@@ -35,43 +37,29 @@ window.onload = function() {
 }
 
 window.onkeydown = function(event) {
-	if (event.keyCode == 37) {
+	if (event.keyCode === 37) {
 		leftPressed = true;
-	} else if (event.keyCode == 39) {
+	} else if (event.keyCode === 39) {
 		rightPressed = true;
 	}
 }
 
 window.onkeyup = function(event) {
-	if (event.keyCode == 37) {
+	if (event.keyCode === 37) {
 		leftPressed = false;
-	} else if (event.keyCode == 39) {
+	} else if (event.keyCode === 39) {
 		rightPressed = false;
 	}
 }
 
-var ws = new WebSocket("ws://localhost:1100/cervii-reloaded-ws");
+var ws = new WebSocket("wss://home.jirik.us/cervii-reloaded-ws");
 ws.onopen = function(event) {
 	ws.send("R");
+	status = "W";
 }
 ws.onmessage = function(event) {
-	var parts = event.data.split(" ");
-
-	if (parts.length == 1 && parts[0] === "P") {
-		ws.send("A");
-	} else if (parts.length == 8 && parts[0] == "S") {
-		pnum = parseInt(parts[1]);
-		players = [{
-			x: parseInt(parts[2]),
-			y: parseInt(parts[3]),
-			angle: parseInt(parts[4]) * Math.PI / 180
-		}, {
-			x: parseInt(parts[5]),
-			y: parseInt(parts[6]),
-			angle: parseInt(parts[7]) * Math.PI / 180
-		}];
-
-		setInterval(doMove, 100 / 3);
+	if (!processMsg(event.data)) {
+		console.log("Invalid message: " + event.data);
 	}
 }
 ws.onerror = function(event) {
@@ -81,31 +69,94 @@ ws.onclose = function(event) {
 	console.log("onclose!!");
 }
 
+function processMsg(msg) {
+	var parts = msg.split(" ");
+
+	if (status === "W" && parts.length === 1 && parts[0] === "P") {
+		ws.send("A");
+		return true;
+	} else if (status === "W" && parts.length === 8 && parts[0] === "S") {
+		var mn = parseInt(parts[1]);
+		if (isNaN(mn) || mn < 1 || mn > 2) {
+			return false;
+		}
+
+		var ps = [];
+		for (var i = 0; i < 2; i++) {
+			var x = parseInt(parts[3 * i + 2]);
+			var y = parseInt(parts[3 * i + 3]);
+			var angle = parseInt(parts[3 * i + 4]);
+
+			if (isNaN(x) || isNaN(y) || isNaN(angle) ||
+			x < 0 || x >= 800 || y < 0 || y >= 800 || angle < 0 || angle >= 360) {
+				return false;
+			}
+
+			ps.push({
+				x: x,
+				y: y,
+				angle: angle * Math.PI / 180,
+				color: colors[i]
+			});
+		}
+
+		status = "S";
+		players = ps;
+		myNumber = mn;
+		interval = setInterval(doMove, 100 / 3);
+		return true;
+	} else if (status === "S" && parts.length === 2 && (parts[0] === "0" || parts[0] === "1" || parts[0] === "2")) {
+		var pnum = parseInt(parts[1]);
+		if (isNaN(pnum) || pnum < 1 || pnum > players.length) {
+			return false;
+		}
+
+		if (parts[0] === "1") {
+			players[pnum - 1].angle -= 0.16;
+		} else if(parts[0] === "2") {
+			players[pnum - 1].angle += 0.16;
+		}
+		advancePlayer(pnum);
+		return true;
+	} else if (status === "S" && parts.length === 2 && parts[0] === "E") {
+		clearInterval(interval);
+		status = undefined;
+		players = undefined;
+		myNumber = undefined;
+		interval = undefined;
+		return true;
+	} else {
+		return false;
+	}
+}
+
 function doMove() {
 	if (leftPressed && !rightPressed) {
-		players[pnum - 1] += 0.16;
+		players[myNumber - 1].angle -= 0.16;
 		ws.send("1");
 	} else if (rightPressed && !leftPressed) {
-		players[pnum - 1] -= 0.16;
+		players[myNumber - 1].angle += 0.16;
 		ws.send("2");
 	} else {
 		ws.send("0");
 	}
 
-	for (var i = 0; i < players.length; i++) {
-		var p = players[i];
+	advancePlayer(myNumber);
+}
 
-		var sin = Math.sin(p.angle);
-		var cos = Math.cos(p.angle);
+function advancePlayer(pnum) {
+	var p = players[pnum - 1];
 
-		ctx.fillStyle = colors[i];
-		for (var j = 0; j < 4; j++) {
-			p.x += sin;
-			p.y += cos;
+	var sin = Math.sin(p.angle);
+	var cos = Math.cos(p.angle);
 
-			for (var k = -2; k <= 2; k++) {
-				ctx.fillRect(Math.round(p.x + k * cos), Math.round(p.y - k * sin), 2, 2);
-			}
+	ctx.fillStyle = p.color;
+	for (var j = 0; j < 4; j++) {
+		p.x += cos;
+		p.y += sin;
+
+		for (var k = -2; k <= 2; k++) {
+			ctx.fillRect(Math.round(p.x + k * sin), Math.round(p.y - k * cos), 2, 2);
 		}
 	}
 }
