--- a/cervii-reloaded.html
+++ b/cervii-reloaded.html
@@ -4,7 +4,7 @@
 		<title>cervii reloaded</title>
 		<meta name="viewport" content="initial-scale=1, user-scalable=0">
 	</head>
-	<body id="body" style="background-color: #000000; margin: 10px; overflow: hidden;">
+	<body id="body" style="background-color: #000000; margin: 10px; overflow: hidden; visibility: hidden;">
 		<div id="cOverlay" style="position: absolute; text-align: center;">
 			<input id="controlButton" type="button" value="Connecting" disabled
 				style="position: relative; font-size: 2em;">
@@ -36,6 +36,7 @@ input[type=button]:active {
 var c = document.getElementById("c");
 var cOverlay = document.getElementById("cOverlay");
 var controlButton = document.getElementById("controlButton");
+var body = document.getElementById("body");
 var ctx = c.getContext("2d");
 
 var colors = [
@@ -59,6 +60,7 @@ var rightTouches = [];
 window.onload = function() {
 	resizeCanvas();
 	resetBoard();
+	body.style.visibility = "visible";
 }
 
 window.onresize = resizeCanvas;
